# huobi-chain

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  CODEOWNERS  CONTRIBUTING.md  COPYING  Cargo.toml  LICENSE  Makefile  README.md  README_EN.md  jenkins-x.yml  package.json  skaffold.yaml
.github/ISSUE_TEMPLATE/: bug-report.md  feature.md
.hooks/: pre-commit
CHANGELOG/: CHANGELOG-0.5.md
charts/huobi-chain/: Chart.yaml  Makefile  values.yaml
charts/preview/: Makefile  requirements.yaml
config/: chain.toml  genesis.toml
contract/: CONTRACT_GUILD.md  Makefile
contract/src/: simple_storage.c
core/api/src/: lib.rs
core/api/src/schema/: transaction.rs
core/executor/src/: lib.rs
core/executor/src/tests/: bank_contract.rs
core/mempool/src/: lib.rs
devtools/chain/: config.toml  genesis.json
devtools/ci/: install.sh  package.sh
devtools/docker-compose/: bft-4-node.yaml  node-1-chain.toml  node-2-chain.toml  node-3-chain.toml  node-4-chain.toml  node-genesis.toml
docs/: README.md  asset_service.md  authorization_service.md  config.md  contract_demo.md  contribute.md  faq.md  getting_started.md  graphql_api.md  index.html  index.md  intro.md  js_sdk.md  layout.md  metadata_service.md  multi_node_deploy.md  multi_signature_service.md  navbar.md  node_manager_service.md  overlord.md  riscv_service.md  schema.graphql  service_overview.md  sidebar.md  testnet.md
docs/en-us/: README.md  asset_service.md  config.md  contract_demo.md  contribute.md  faq.md  getting_started.md  js_sdk.md  metadata_service.md  node_manager_service.md  overlord.md  riscv_service.md  service_overview.md  sidebar.md  storage.md  testnet.md  transaction_pool.md
protocol/src/types/: genesis.rs
services/admission_control/: Cargo.toml
services/admission_control/src/: lib.rs  tests.rs  types.rs
services/asset/: Cargo.toml
services/asset/src/: lib.rs  types.rs
services/asset/src/tests/: mod.rs
services/authorization/: Cargo.toml
services/authorization/src/: lib.rs
services/governance/: Cargo.toml
services/governance/src/: lib.rs  types.rs
services/governance/src/tests/: mod.rs  test_genesis.toml
services/kyc/: Cargo.toml
services/kyc/src/: error.rs  lib.rs  main.rs  tests.rs  types.rs
services/kyc/src/expression/: evaluation.rs  mod.rs  node.rs  token.rs  traits.rs  types.rs
services/kyc/src/expression/tests/: mod.rs
services/kyc/src/work/: mod.rs
services/metadata/: Cargo.toml
services/metadata/src/: lib.rs  types.rs
services/metadata/src/tests/: mod.rs
services/node_manager/: Cargo.toml
services/node_manager/src/: lib.rs  types.rs
services/node_manager/src/tests/: mod.rs  test_genesis.toml
services/riscv/: Cargo.toml
services/riscv/src/: authorization.rs  common.rs  error.rs  lib.rs  types.rs
services/riscv/src/tests/: assert  assert.c  duktape.rs  general  general.c  macros.rs  mod.rs  simple_storage  write_read  write_read.c
services/riscv/src/vm/: chain_interface.rs  interpreter.rs  mod.rs
services/riscv/src/vm/c/: pvm.c  pvm.h
services/riscv/src/vm/syscall/: assert.rs  chain_interface.rs  convention.rs  debug.rs  environment.rs  mod.rs
src/: main.rs
tests/e2e/: .eslintrc.js  .gitignore  asset.test.ts  basic.test.ts  chain.toml  docker-compose-e2e-test.yaml  genesis.toml  governance.test.ts  helper.ts  jest.config.js  jest.setup.js  kyc.test.ts  node_manager.test.ts  package-lock.json  package.json  riscv.test.ts  tsconfig.json  utils.ts
tests/e2e/change_validators/: change_validators_test.ts  common.ts  create_configs.ts  keypairs.json
tests/e2e/change_validators/templates/: chain.toml.template  docker-compose.yml.template  genesis.toml.template
tests/e2e/riscv_contracts/: contract_test  contract_test.c
tests/integration/: mod.rs  service_test.rs  test_genesis.toml  types.rs
