[package]
name = "huobi-chain"
version = "0.4.0-beta2"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

[dependencies]
muta = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-dev.1"}
protocol = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-dev.1", package = "muta-protocol" }
authorization = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-dev.1"}
multi-signature = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-dev.1"}

derive_more = "0.99"
tokio = { version = "0.2", features = ["macros", "rt-core", "rt-util"]}
clap = "2.33"

metadata = { path = "services/metadata" }
asset = { path = "services/asset" }
kyc = { path = "services/kyc" }
riscv = { path = "services/riscv" }
admission_control = { path = "services/admission_control" }
governance = { path = "services/governance" }

[workspace]
members = [
  "services/metadata",
  "services/riscv",
  "services/asset",
  "services/kyc",
  "services/admission_control",
  "services/governance"
]
