[package]
name = "governance"
version = "0.4.0-beta2"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta = { git = "https://github.com/nervosnetwork/muta", rev = "7382279"}
protocol = { git = "https://github.com/nervosnetwork/muta", rev = "7382279", package = "muta-protocol" }
binding-macro = { git = "https://github.com/nervosnetwork/muta", rev = "7382279" }

asset = { path = "../asset" }
metadata = { path = "../metadata" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
bytes = "0.5"
derive_more = "0.99"
byteorder = "1.3"
muta-codec-derive = "0.2"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
hex = "0.4"
toml = "0.5"
lazy_static = "1.4"
framework = { git = "https://github.com/nervosnetwork/muta", rev = "7382279"}
metadata = { path = "../metadata" }

