[package]
name = "kyc"
version = "0.1.0"
authors = ["LycrusHamster <liang2929@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
muta = { git = "https://github.com/nervosnetwork/muta", tag = "v0.1.2-beta2"}
protocol = { git = "https://github.com/nervosnetwork/muta", tag = "v0.1.2-beta2", package = "muta-protocol" }
binding-macro = { git = "https://github.com/nervosnetwork/muta", tag = "v0.1.2-beta2" }

[dev-dependencies]
framework = { git = "https://github.com/nervosnetwork/muta", tag = "v0.1.2-beta2"}