[package]
name = "kyc"
version = "0.1.0"
authors = ["LycrusHamster <liang2929@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
muta-codec-derive = "0.2"

muta = { git = "https://github.com/nervosnetwork/muta", rev = "a0bf7b4f"}
protocol = { git = "https://github.com/nervosnetwork/muta", rev = "a0bf7b4f", package = "muta-protocol" }
binding-macro = { git = "https://github.com/nervosnetwork/muta", rev = "a0bf7b4f" }

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"

framework = { git = "https://github.com/nervosnetwork/muta", rev = "a0bf7b4f"}
core-storage = { git = "https://github.com/nervosnetwork/muta", rev = "a0bf7b4f" }
