[package]
name = "metadata"
version = "0.1.0-rc.2"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binding-macro = { git = "https://github.com/nervosnetwork/muta", rev = "28e685a" }
protocol = { git = "https://github.com/nervosnetwork/muta", rev = "28e685a", package = "muta-protocol" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
bytes = "0.5"
derive_more = "0.15"
byteorder = "1.3"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { git = "https://github.com/nervosnetwork/muta", rev = "28e685a" }
