[package]
name = "metadata"
version = "0.4.0-beta2"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
muta = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-dev.2"}
protocol = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-dev.2", package = "muta-protocol" }
binding-macro = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-dev.2" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
bytes = "0.5"
derive_more = "0.15"
byteorder = "1.3"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { git = "https://github.com/nervosnetwork/muta", tag = "v0.2.0-dev.2"}
