[package]
name = "riscv"
version = "0.2.0"
authors = ["Muta Dev <muta@nervos.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binding-macro = { git = "https://github.com/nervosnetwork/muta", rev = "1cd7cb6"}
protocol = { git = "https://github.com/nervosnetwork/muta", rev = "1cd7cb6", package = "muta-protocol" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rlp = "0.4"
derive_more = "0.15"
byteorder = "1.3"
ckb-vm = { git = "https://github.com/huwenchao/ckb-vm", rev = "7aa43ed", features = ["asm"] }
hex = "0.4"
log = "0.4"

[dev-dependencies]
cita_trie = "2.0"
async-trait = "0.1"
framework = { git = "https://github.com/nervosnetwork/muta", rev = "1cd7cb6"}
